--- a/css/reset.css
+++ b/css/reset.css
@@ -1,39 +1,71 @@
-@charset "utf-8";
+@charset 'utf-8';
 /* CSS Document */
-body, html, div, blockquote, img, label, p, h1, h2, h3, h4, h5, h6, pre, ul, ol,
-li, dl, dt, dd, form, a, fieldset, input, th, td, section
-{
-margin: 0; padding: 0; border: 0; outline: none;
--webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+body,
+html,
+div,
+blockquote,
+img,
+label,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+pre,
+ul,
+ol,
+li,
+dl,
+dt,
+dd,
+form,
+a,
+fieldset,
+input,
+th,
+td,
+section {
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
+	        box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+
+	border: 0;
+	outline: none;
 }
- 
-h1, h2, h3, h4, h5, h6
-{
-font-size: 100%;
-font-family: open-sans;
-padding: .6em 0;
-margin: 0 15px;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: open-sans;
+	font-size: 100%;
+
+	margin: 0 15px;
+	padding: 0.6em 0;
 }
- 
-ul, ol
-{
-list-style: none;
+
+ul,
+ol {
+	list-style: none;
 }
- 
-a
-{
-text-decoration: none;	 
+
+a {
+	text-decoration: none;
 }
-.floatLeft
-{
-float: left;
-padding: .5em .5em .5em 0;
+.floatLeft {
+	float: left;
+
+	padding: 0.5em 0.5em 0.5em 0;
 }
- 
-.floatRight
-{
-float: right;
-padding: .5em 0 .5em .5em;
+
+.floatRight {
+	float: right;
+
+	padding: 0.5em 0 0.5em 0.5em;
 }
